/***********************************************************************
X3 ChangeLog

2009-10-30  Henrik Stuart  <evilnet@hstuart.dk>

	* src/proto.h: add extra parameter to reg_oper_func and oper_func_t.

	* src/global.c: add extra NULL argument parameter to reflect changes.

	* src/proto-common.c: add extra parameter to implementation of
	reg_oper_func and reflect the extra parameter in call_oper_funcs.

	* src/proto-p10.c: free storage for extra parameters.

2009-10-28  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.h src/hash.c: add extra parameter to del_user_func_t,
	reg_del_user_func, and unreg_del_user_func. Add new call_del_user_funcs
	function to abstract hash internals from outside callers.

	* src/opserv.c src/mod-python.c src/spamserv.c src/nickserv.c: add extra
	NULL argument(parameter to reflect change in hash.

	* src/proto-p10.c: use call_del_user_funcs instead of interfacing with
	hash.c internals directly. Remove unused code due to this change.

	* src/proto-common.c: remove reference to hash internals.

2009-10-28  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/x3ldap.c: Added ldap_do_oslevel() to set OpServ access level in
	LDAP.

	* src/x3ldap.h: Added ldap_do_oslevel() to set OpServ access level in
	LDAP.

	* src/nickserv.c: Added configuration option for OpServ access level
	LDAP attribute name and call to ldap_do_oslevel() on access level
	change.

	* src/nickserv.h: Added configuration option for OpServ access level
	LDAP attribute name.

	* x3.conf.example: Added configuration option for OpServ access level
	LDAP attribute name.

2009-10-27  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.h src/hash.c: add extra parameter to new_user_func_t and
	reg_new_user_func. Add new call_new_user_funcs function to abstract hash
	internals from outside callers.

	* src/proto-p10.c: use call_new_user_funcs instead of interfacing with
	hash.c internals directly. Remove unused code due to this change.
