@@ -3,6 +3,18 @@ X3 ChangeLog
 
 2009-10-30  Henrik Stuart  <evilnet@hstuart.dk>
 
+	* src/hash.h src/hash.c: add extra parameter to nick_change_func_t and
+	reg_nick_change_func. Also fix memory leaks from not freeing extras lists
+	for some callback routines.
+
+	* src/chanserv.c src/opserv.c src/mod-python.c src/spamserv.c
+	src/nickserv.c src/modcmd.c: add extra NULL argument/parameter to reflect
+	change in hash.
+
+	* src/proto-p10.c: fix logic for calling call_new_user_funcs.
+
+2009-10-30  Henrik Stuart  <evilnet@hstuart.dk>
+
 	* src/proto.h: add extra parameter to reg_oper_func and oper_func_t.
 
 	* src/global.c: add extra NULL argument parameter to reflect changes.
